<resources>
    <string name="app_name">Lessons</string>
    <string name="login_header_student">Login - Student</string>
    <string name="signup_header_student">Signup - Student</string>
    <string name="login_header_teacher">Login - Teacher</string>
    <string name="signup_header_teacher">Signup - Teacher</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register_redirect">Don\'t have account yet? Create account</string>
    <string name="login_redirect">Already have account? Login here</string>
    <string name="signup">Signup</string>
    <string name="redirect_to_student_login">Are you a student? Login here</string>
    <string name="redirect_to_teacher_login">Are you a teacher? Login here</string>
    <string name="redirect_to_student_signup">Are you a student? Signup here</string>
    <string name="redirect_to_teacher_signup">Are you a teacher? Signup here</string>
    <string name="title_activity_drawer_navigation">DrawerNavigation</string>
    <string name="id_label">ID</string>
    <string name="error_occurred">Error occurred: %1$s</string>
    <string name="conversation_with">Conversation with: %1$s</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="conversation_hash">#%1$s</string>
    <string name="subject_label">Subject</string>
    <string name="school_level_label">School level</string>
    <string name="lesson_place_label">Lesson place</string>
    <string name="max_cost_label">Max cost</string>
    <string name="min_lesson_length_label">Min lesson length</string>
    <string name="max_lesson_length_label">Max lesson length</string>
    <string name="name_format">Name: %1$s %2$s</string>
    <string name="email_format">Email: %1$s</string>
    <string name="phone_format">Phone number: %1$s</string>
    <string name="self_description_label">Self description:</string>
    <string name="full_star_desc">Full Star</string>
    <string name="half_star_desc">Half Star</string>
    <string name="empty_star_desc">Empty Star</string>
    <string name="rating_format">%1$.1f (%2$d)</string>
    <string name="signup_title_format">Signup - %1$s</string>
    <string name="login_title_format">Login - %1$s</string>
    <string name="name_label">Name</string>
    <string name="surname_label">Surname</string>
    <string name="password_confirm_label">Password confirm</string>
    <string name="old_password_label">Old password</string>
    <string name="new_password_label">New password</string>
    <string name="successfully_signed_up">Successfully signup!</string>
    <string name="opposite_role_login">Are you a %1$s? Login here</string>
    <string name="opposite_role_signup">Are you a %1$s? Signup here</string>
    <string name="message_label">Message</string>
    <string name="lesson_link_label">Lesson link</string>
    <string name="address_label">Address</string>
    <string name="avatar_desc">Avatar</string>
    <string name="menu_desc">Menu</string>
    <string name="notifications_desc">Notifications</string>
    <string name="account_desc">Account</string>
    <string name="description_optional">Description (optional)</string>
    <string name="yourself_description_label">Yourself description</string>
    <string name="left_arrow_desc">Left Arrow</string>
    <string name="right_arrow_desc">Right Arrow</string>
    <string name="update_password_title">Update password</string>
    <string name="cancel">Cancel</string>
    <string name="update_basic_data_title">Update basic data</string>
    <string name="phone_label">Phone number</string>
    <string name="actions_needed_prefix">Actions needed to be verified:</string>
    <string name="account_verified_message">Your account is verified and students can see you</string>
    <string name="click_change_avatar">Click to change avatar</string>
    <string name="pick_photo">Pick photo</string>
    <string name="avatar_empty">Avatar is empty</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="basic_data_title">Basic data</string>
    <string name="basic_account_data_desc">Basic account data</string>
    <string name="password_title">Password</string>
    <string name="change_account_password_desc">Change account password</string>
    <string name="lessons_settings_title">Lessons settings</string>
    <string name="lessons_settings_desc">Settings about your taught lessons</string>
    <string name="available_hours_title">Available hours</string>
    <string name="available_hours_desc">Set hours when you can make appointments</string>
    <string name="choose_image">Choose image</string>
    <string name="opinions_about_me_title">Opinions about me</string>
    <string name="by_format">By: %1$s</string>
    <string name="content_label">Content: %1$s</string>
    <string name="no_content_provided">No content provided</string>
    <string name="opinions_title">Opinions</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="contact_data_label">Contact data:</string>
    <string name="phone_label_short">Phone number: %1$s</string>
    <string name="email_label_format">Email: %1$s</string>
    <string name="teacher_description_label">Teacher description:</string>
    <string name="teacher_information_label">Teacher information:</string>
    <string name="taught_subjects_label">Taught subjects: %1$s</string>
    <string name="taught_school_level_label">Taught school level: %1$s</string>
    <string name="lessons_locations_label">Lessons locations: %1$s</string>
    <string name="online_platform_label">Online platform: %1$s</string>
    <string name="teacher_location_label">Teacher location: %1$s</string>
    <string name="lesson_length_label">Lesson length: %1$s min</string>
    <string name="lesson_cost_label">Lesson cost: %1$s $</string>
    <string name="available_hours_label">Available hours: </string>
    <string name="day_hours_format">%1$s: %2$s</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="send_request_for_lesson">Send request for lesson</string>
    <string name="rate_teacher">Rate teacher</string>
    <string name="opinions_about_teacher">Opinions about teacher</string>
    <string name="leave_rating_title">Leave rating</string>
    <string name="edit_rating_title">Edit rating</string>
    <string name="rating_label_format">Rating: %1$.1f</string>
    <string name="description_optional_label">Description (optional)</string>
    <string name="send_label">Send</string>
    <string name="lessons_incoming_week">Lessons incoming in current week</string>
    <string name="with_label_format">With: %1$s</string>
    <string name="subject_format">Subject: %1$s</string>
    <string name="time_label_format">Time: %1$s %2$s</string>
    <string name="no_lessons_in_week">No lessons in this week</string>
    <string name="nav_app_title">Lessons</string>
    <string name="nav_menu_desc">Menu</string>
    <string name="nav_notifications_desc">Notifications</string>
    <string name="nav_account_desc">Account</string>
    <string name="nav_profile_settings_title">Profile settings</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_find_teacher">Find teacher</string>
    <string name="drawer_lesson_requests">My lesson requests</string>
    <string name="drawer_lessons_calendar">Lessons calendar</string>
    <string name="drawer_conversations">Conversations</string>
    <string name="drawer_lessons_history">Lessons history</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_lessons_requests_teacher">Lessons requests</string>
    <string name="drawer_available_hours">Available hours</string>
    <string name="drawer_opinions">Opinions about me</string>
    <string name="close_button">Close</string>
    <string name="send_lesson_request_title">Send lesson request</string>
    <string name="lesson_price_format">Lesson price: %1$s $</string>
    <string name="lesson_length_format">Lesson length: %1$s min</string>
    <string name="pick_date_button">Pick a Date</string>
    <string name="selected_date_format">Selected date: %1$s</string>
    <string name="select_date_button">Select Date</string>
    <string name="no_hours_available">No hours available</string>
    <string name="subject_label_dialog">Subject</string>
    <string name="school_level_label_dialog">School level</string>
    <string name="lesson_place_label_dialog">Lesson place</string>
    <string name="comment_optional">Comment (optional)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="teacher_label">Teacher: </string>
    <string name="subject_label_lesson">Subject:</string>
    <string name="school_level_label_lesson">School level:</string>
    <string name="lesson_place_label_lesson">Lesson place:</string>
    <string name="time_label_lesson">Time:</string>
    <string name="status_label">Status:</string>
    <string name="lesson_link_label_lesson">Lesson link:</string>
    <string name="teacher_contact_label">Teacher contact:</string>
    <string name="email_label_lesson">Email:</string>
    <string name="phone_number_label_lesson">Phone number:</string>
    <string name="additional_info_label">Additional information:</string>
    <string name="send_message_button">Send message</string>
    <string name="send_message_to_teacher">Send message to teacher</string>
    <string name="message_input_label">Message</string>
    <string name="accept_button">Accept</string>
    <string name="update_lessons_settings_title">Update lessons settings</string>
    <string name="lessons_online_platform_label">Lessons online platform</string>
    <string name="lesson_money_rate_label">Lesson money rate</string>
    <string name="lesson_length_label_settings">Lesson length</string>
    <string name="address_input_label">Address</string>
    <string name="show_on_map_button">Show on Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dropdown_arrow">Dropdown Arrow</string>
    <string name="update_button">Update</string>
    <string name="student_label">Student:</string>
    <string name="subject_label_request">Subject:</string>
    <string name="school_level_label_request">School level:</string>
    <string name="lesson_place_label_request">Lesson place:</string>
    <string name="time_label_request">Time:</string>
    <string name="status_label_request">Status:</string>
    <string name="lesson_link_label_request">Lesson link:</string>
    <string name="student_contact_label">Student contact:</string>
    <string name="accept_lesson_request">Accept request</string>
    <string name="reject_lesson_request">Reject request</string>
    <string name="send_message">Send message</string>
    <string name="set_lesson_link">Set Lesson link</string>
    <string name="accept_lesson_confirm">Are you sure you want to accept this lesson?</string>
    <string name="reject_lesson_confirm">Are you sure you want to reject this lesson?</string>
    <string name="send_message_to_student">Send message to student</string>
    <string name="set_lesson_link_dialog">Set lesson link</string>
    <string name="student_name_surname_hint">Student name/surname</string>
    <string name="time_label">Time:</string>
    <string name="teacher_name_surname">Teacher name/surname</string>
    <string name="estimated_income_current_month">Estimated income in current month</string>
    <string name="current_estimated_income_format">Current estimated income: %1$s $</string>
</resources>